# CST1510_PROJECT

./: .env  README.md  app.py  auth.py  database.py  intelligence_platform.db  requirements.txt  run_time.txt  users.txt
.streamlit/: api_key.env  config.toml  pyproject.toml  secrets.toml  setup.py  setup.sh
Database.db/: CRUD_operations.py  database.py  database_manager.py  sample_data.py  user_service.py
pages/: dashboard.py  login.py
